--- a/portfolio.css
+++ b/portfolio.css
@@ -215,7 +215,7 @@ h1 {
 }
 
 .contact .my-info {
-  font-size: 50px;
+  font-size: 3rem;
   color: #fff;
   padding: 5rem;
   display: flex;
@@ -281,6 +281,31 @@ h1 {
   width: 30rem;
 }
 
+.blog {
+  flex: 0.5;
+}
+.blogs {
+  font-size: 2rem;
+  padding: 2rem;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3rem;
+}
+
+.blogs .content {
+  background-color: #646262;
+  padding: 2rem;
+  border-radius: 2rem;
+}
+
+.blogs img {
+  width: 100%;
+  height: 20rem;
+}
+.blogs h2 {
+  text-align: center;
+}
 #login {
   padding: 5rem;
 }
