--- a/portfolio.css
+++ b/portfolio.css
@@ -21,12 +21,16 @@ nav{
   justify-content: space-between;
 }
 
-.log{
-  float: left;
-  width:200px
+.hom{
+  display:block;
+  padding: 4rem;
 }
-.home{
-  display:flex;
+
+img{
+  float:left;
+  width:140px;
+  padding:2rem;
+  display:fixed;
 }
 
 .links{
@@ -44,18 +48,12 @@ nav{
   padding: 8px 0;
 }
 body{
-  
-  top:6rem
-  padding:.5rem;
   background-color: #1a1a1a;
+  padding: .5rem;
+  top:6rem
+ 
 }
 
-
-.about {
-  min-height: 100vh;
-  min-width: 70%;
-  padding: 1rem;
-}
 
 .btn {
   padding: 1rem;
@@ -83,7 +81,7 @@ body{
 
 .about .heading {
   text-align: center;
-  margin: 0 6rem;
+  margin: 6rem;
   font-size: 4rem;
   padding: 1rem;
   border-radius: 0.1rem solid #ff4;
@@ -162,54 +160,54 @@ h1 {
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: .1rem 0;
+  padding: 5.1rem;
   padding-left: .1rem;
 }
 
 .education .box-container .box {
-  width: 13rem;
-  margin: 0rem 2.5rem 5rem;
-  padding-left: .3rem;
+  width: 2rem;
+  margin: 2rem 2.5rem 3rem;
+  padding-left: 3.3rem;
   border-left: 0.2rem solid #fff;
   position: relative;
 }
 
 .education .box-container span {
-  font-size: 1rem;
+  font-size: 1.8rem;
   background: #222;
   color: #222;
   border-radius: 1.5rem;
-  padding: 1rem 1.1rem;
+  padding: 2rem 1.1rem;
   color: #eee;
 }
 
 .education .box-container h3 {
   font-size: 1.5rem;
   color: rgb(134, 184, 17);
-  padding-top: .13rem;
+  padding-top: 1.13rem;
 }
 
 .education .box-container p {
   font-size: 1.2rem;
   color: #fff;
-  padding-top: .1rem;
+  padding-top: .7rem;
 }
 
 .portfolio {
-  padding: .1rem;
+  padding: 16.1rem;
 }
 .portfolio h1 {
-  font-size: .3rem;
+  font-size: 2.3rem;
 }
 .portfolio .box-container {
   display: flex;
-  gap: 2rem;
+  gap: 4rem;
   flex-wrap: wrap;
 }
 
 .portfolio .box-container .box img {
-  width: 20rem;
-  height: 17rem;
+  width: 30rem;
+  height: 18rem;
   cursor: pointer;
 }
 
@@ -227,7 +225,7 @@ h1 {
 }
 
 .contact .my-info span {
-  margin-left: 8rem;
+  margin-left: 4rem;
 }
 
 .contact .my-info div,
@@ -247,6 +245,7 @@ h1 {
 
 .contact {
   display: flex;
+  padding: 19rem;
 }
 .contact .message-container {
   gap: 1rem;
@@ -273,7 +272,7 @@ h1 {
 }
 
 .skills {
-  padding: 4rem;
+  padding: 8rem;
   font-size: 1.2rem;
   color: white;
 }
