--- a/term.css
+++ b/term.css
@@ -22,3 +22,21 @@ p{
   gap: 1rem;
   justify-content: space-between;
 }
+input{
+  color: red;
+  text-align: right;
+  text-transform: capitalize;
+}
+.agree{
+  color: rgb(255, 0, 0);
+}
+
+.agree:hover{
+  color: rgb(46, 22, 153);
+  background-color: rgb(218, 218, 17);
+  padding: 1rem;
+  text-align: center;
+  font-size: 2rem;
+  border-radius: 10%;
+}
+
