--- a/blog.css
+++ b/blog.css
@@ -9,8 +9,9 @@
   transition: all 0.2s linear;
 }
 button{
+  border-radius: 10%;
   padding:1rem;
-  background-color:rgb(161, 209, 82)
+  background-color:rgb(248, 247, 252)
 }
 input{
   padding:1rem;
@@ -19,30 +20,17 @@ input{
 .example{
   float:right;
 }
-*::selection {
-  background: var(--yellow);
-  color: rgb(55, 136, 82);
-}
+
 
 html {
   font-size: 20px;
   overflow-x: hidden;
+  padding: 1rem;
 }
 
-html::-webkit-scrollbar-trck {
-  width: 4rem;
-}
-
-html::-webkit-scrollbar-trck {
-  background: rgb(35, 172, 103);
-}
-
-html::-webkit-scrollbar-trck {
-  background: rgb(26, 16, 16);
-}
 
 body {
-  background: rgb(241, 236, 236);
+  background: rgb(161, 227, 231);
   overflow-x: hidden;
   padding: 1rem;
   padding-top: 1rem;
@@ -51,19 +39,16 @@ body {
 #home{
   text-align: center;
 }
-#home p{
-  font-size: 5rem;
-  color:rgb(0, 195, 255);
-}
-span{
+
+div span{
   color:rgb(0, 21, 209)
+  
+}
+div p{
+  text-align: center;
+  padding-bottom: 4rem;
 }
 
-#home p:hover{
-  font-size: 1rem;
-  color:rgb(7, 11, 12);
-  text-transform: uppercase;
-}
 img{
   width: 170px;
   float:left;
@@ -72,33 +57,38 @@ img{
 .section{
   display: inline-block;
   padding-left: 2rem;
-  margin-left: 9rem;
+  margin-left: 5rem;
+
+}
+
+
+a  .s1, .s1, .s2, .s3, .s4, .s5{
+ color:rgb(32, 194, 243);
+ font-size: 1rem;
+ color:rgb(53, 19, 175);
+ background-color: aqua;
+ border-radius: 10%;
 
 }
 a{
-  
-  justify-items: space-evenly;
-  width: fit-content;
-  margin: 2rem;
-  background-color: rgb(89, 212, 206);
-  border-radius: 10%;
- 
+  align-items: center;
+  justify-content: space-between;
+  gap: 4rem;
+  padding: .1rem;
+  margin-left: 5rem;
 }
 
-a:hover{
-  display: inline;
-  justify-items: space-evenly;
-  margin: 2rem;
-  padding: 1rem;
-  color: white;
-  background-color: rgb(201, 167, 14);
-  border-radius: 20%;
+.blog-container{
+  padding:1rem ;
+  
 }
-a  .s1, .s1, .s2, .s3, .s4, .s5{
- color:rgb(146, 127, 255);
- font-size: 2rem;
- color:white;
+
+ h2{
+  margin: 1rem;
+  color:blue
 }
+
+
 
 input {
   font-size: .5rem;
@@ -113,18 +103,14 @@ input {
 textarea{
 font-size: 1.5rem;
   color: rgb(73, 179, 206);
-  padding: 0rem;
+  padding: 1rem;
   width: fit-content;
   margin: auto;
   border-radius: 1rem;
   text-align: center;}
 
-#btn{
-  font-size: 1.2rem;
-  color: rgb(73, 179, 206);
-  padding: 1rem;
-  width: fit-content;
-  margin: auto;
+.t{
+  
   border-radius: 1rem;
   text-align: center;
   float:right;
@@ -133,34 +119,59 @@ font-size: 1.5rem;
 span{
   font-size: 2rem;
 }
-.comments-form{
-  font-size: 1.3rem;
-  color: white;
+.t{
+  font-size: 1.5rem;
+}
+#comment-form{
   background-color: #7ea2c7;
-  padding: 2rem;
+  padding: 1rem;
   width: fit-content;
   margin: auto;
+  gap: 2rem;
   border-radius: 1rem;
   text-align: center;
   float:right;
+  display: flex;
 }
 
 .like{
-  padding-bottom: 2rem;
+  padding: 2rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  
 
 }
 button{
-  border-radius: 50%;
+  border-radius: 3rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 button:hover{
  color:aquamarine;
- text-transform: uppercase;
- background-color: beige;
 }
 
+#like-section {
+  text-align: center;
+}
 
+#like-section button {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+#like-section #like-count {
+  font-size: 18px;
+  margin: 10px;
+}
+
+label{
+  color:white;
+  
+}
+iconify-icon{
+  color: blue;
+}
 
 
