--- a/portfolio.css
+++ b/portfolio.css
@@ -11,7 +11,7 @@
   height: 4vh;
   width:100%;
   padding:0%;
-  background-color: rgb(41, 44, 44);
+  background-color: rgb(3, 24, 24);
  position:fixed;
  
 }
@@ -28,9 +28,10 @@ nav{
 
 img{
   float:left;
-  width:140px;
+  width:300px;
   padding:2rem;
   display:fixed;
+  border-radius: 50%;
 }
 
 .links{
@@ -48,7 +49,7 @@ img{
   padding: 8px 0;
 }
 body{
-  background-color: #1a1a1a;
+  background-color: #f1eded;
   padding: .5rem;
   top:6rem
  
@@ -56,26 +57,23 @@ body{
 
 
 .btn {
-  padding: 1rem;
-  background: #333;
-  color: #24abf9;
-  cursor: pointer;
+
+  color: rgb(76, 0, 255);
+  background-color: rgb(255, 254, 255);
   margin-top: 1rem;
-  font-size: 1rem;
-  border-radius: 5rem;
-  /* width: 10rem; */
-  display: flex;
-  align-items: center;
-  gap: 5px;
+  margin-left: 2rem;
+  border-radius: 3rem;
+display: flex;
+font-size: 1rem;
 }
 
-.btn i {
-  padding: 0rem 0.5rem;
-  font-size: 1.8rem;
+ button  {
+  padding: 1.5rem;  
 }
+
 
 .btn:hover {
-  color: red;
+  color: rgb(0, 195, 255);
   background-color: rgb(255, 254, 255);
 }
 
@@ -84,13 +82,16 @@ body{
   margin: 6rem;
   font-size: 4rem;
   padding: 1rem;
-  border-radius: 0.1rem solid #ff4;
+  border-radius: 0.1rem solid rgb(96, 68, 255);
+}
+.about{
+  background-color: rgb(252, 253, 253);
 }
 
 .about .heading span {
-  color: yellow;
+  color: rgb(0, 247, 255);
   padding: 1rem;
-  border-radius: 0.1rem solid rgb(161, 161, 127);
+  border-radius: 0.1rem solid rgb(252, 252, 250);
 }
 .about .row {
   display: flex;
@@ -108,13 +109,13 @@ body{
 
 .about .row .info h3 {
   font-size: 2rem;
-  color: #ff4;
+  color: rgb(19, 19, 18);
   padding: 1rem 0;
   font-weight: normal;
 }
 
 .about .row .info span {
-  color: #eee;
+  color: rgb(15, 28, 207);
   padding: 0 -0.5rem;
 }
 
@@ -129,7 +130,7 @@ body{
   display: flex;
   /* width:15rem; */
   gap: 7rem;
-  background: #646262;
+  background: #fcfcfc;
   text-align: center;
   flex: 1 1 40rem;
   padding: 1rem;
@@ -140,12 +141,12 @@ body{
 
 .about .row .counter .box span {
   font-size: 1.3rem;
-  color: yellow;
+  color: rgb(8, 8, 8);
 }
 
 .about .row .counter .box h3 {
-  font-size: 1rem;
-  color: rgb(255, 255, 253);
+  font-size: 1.7rem;
+  color: rgb(47, 9, 187);
   margin: 0;
 }
 h1 {
@@ -155,12 +156,16 @@ h1 {
 .heading {
   padding: 8rem;
 }
+.education{
+  background-color: #607471;
+}
+
 .education .box-container {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: 5.1rem;
+  padding: 8rem;
   padding-left: .1rem;
 }
 
@@ -173,9 +178,10 @@ h1 {
 }
 
 .education .box-container span {
-  font-size: 1.8rem;
-  background: #222;
-  color: #222;
+  font-size: 1.2rem;
+  gap:2rem;
+  background: rgb(252, 250, 250);
+  color: rgb(248, 245, 245);
   border-radius: 1.5rem;
   padding: 2rem 1.1rem;
   color: #eee;
@@ -185,16 +191,22 @@ h1 {
   font-size: 1.5rem;
   color: rgb(134, 184, 17);
   padding-top: 1.13rem;
+  margin-top: 2rem;
 }
 
 .education .box-container p {
   font-size: 1.2rem;
   color: #fff;
   padding-top: .7rem;
+  margin-top: 2rem;
+  font-weight: bold;
 }
+
+
 
 .portfolio {
   padding: 16.1rem;
+  background-color: #668ea5;
 }
 .portfolio h1 {
   font-size: 2.3rem;
@@ -235,46 +247,95 @@ h1 {
 }
 
 .contact a {
-  color: white;
+  color: rgb(247, 248, 247);
 }
 
 .contact .my-info .name {
-  color: yellow;
-  font-size: 1.3rem;
+  color: rgb(15, 12, 218);
+  font-size: 2.3rem;
 }
 
 .contact {
   display: flex;
   padding: 19rem;
+  background-color: #6acccf;
+}
+hr{
+
+  padding: 3px;
+  color: #c9eb0b;
+}
+
+iconify-icon{
+  width: 100px;
+  padding: .2rem;
 }
 .contact .message-container {
-  gap: 1rem;
+  
   display: flex;
   flex-direction: column;
-  padding: 5rem;
+  padding: 1rem;
   align-items: center;
-  margin: 3rem;
+  margin: 1rem;
 }
 
 .contact .message-container input {
-  background-color: #646262;
+
   font-size: 1.3rem;
-  padding: 1rem;
+  padding: .1rem;
   border-radius: 1rem;
 }
 
-.contact .message-container input::placeholder {
-  color: #fff;
+
+#contact-form{
+  background-color: none;
+}
+#contact-form {
+  width: 500px;
+  margin: 0 auto;
+  text-align: left;
+}
+label {
+  font-weight: bold;
+}
+input[type="text"], input[type="email"], textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  background-color: #45a049;
 }
 
-.contact .btn {
-  width: fit-content;
-}
+
 
 .skills {
   padding: 8rem;
-  font-size: 1.2rem;
+  font-size: 1.7rem;
+  font-weight: bold;
   color: white;
+  background-color: #43d37f;
+  border: solid blue 2rem;
+}
+.skills h1{
+  color: rgb(74, 50, 180);
+  text-align: center;
+  background-color: #fff;
+  padding: 2rem;
+  border-radius: 10%;
 }
 .skills .box-container {
   display: flex;
@@ -289,11 +350,14 @@ h1 {
 }
 .blogs {
   font-size: 1rem;
-  padding: 1rem;
+  padding: 3rem;
   color: white;
   display: flex;
   flex-wrap: wrap;
   gap: 1.5rem;
+  background-color: #c8d5dd;
+  width:100%;
+  height:100vh;
 }
 
 .blogs .content {
@@ -312,45 +376,32 @@ h1 {
   text-align: center;
 }
 button{
-  font-size: 3rem;
+  font-size: 1rem;
 }
 .rd{
-  border-radius: 40%;
-
+  text-align: center;
+  padding-top: 1rem;
+  color: blue;
 }
+
 .rd:hover{
   color:rgb(241, 8, 8);
-  padding: 2rem;
+ 
   background-color: #14f7db;
-  border-radius: 20%;
+  
 }
-#login {
-  padding: 5rem;
-}
+
 .login-container {
-  font-size: 3rem;
-  color: white;
-  background-color: #646262;
-  padding: 3rem;
+  font-size: 1.5rem;
+  color: rgb(86, 43, 189);
+  background-color: #f1eded;
   width: fit-content;
   margin: auto;
   border-radius: 1rem;
   text-align: center;
 }
 
-.login-container input {
-  font-size: 2.7rem;
-  padding: 1rem 2rem;
-  background-color: inherit;
-  border-bottom: 0.3rem solid black;
-}
-
-.loginbtn {
-  font-size: 2.1rem;
-  padding: 1.5rem 4.5rem;
-  margin: 3rem auto 1rem;
-}
-
+ 
 header {
   position: fixed;
   top: 0;
@@ -425,44 +476,100 @@ menu {
   color: #333;
 }
 
-.home {
+.hom {
   display: flex;
   justify-content: center;
   flex-flow: column;
-  padding: 0 15rem;
+    padding: 10rem;
   text-align: center;
 }
 
-.home h3 {
+.hom h3 {
   font-size: 1.5rem;
   color: #fff;
+  padding: 2rem;
 }
 
-.home h1 {
+.hom h1 span {
+  font-size: 2rem;
+  color: rgb(230, 192, 22);
+  padding: 2rem;
+}
+#home{
+  background-image: url(/Images/download.jpg);
+}
+
+.hom h2 {
+  padding: 2rem;
   font-size: 2rem;
   color: #fff;
 }
 
-.home h1 span {
+.hom h2 span {
   color: #14f7db;
 }
 
-.home p {
+.hom p {
   font-size: 2rem;
   color: #eee;
   padding: 1rem 0;
 }
 
-@media (max-width: 1200px) {
+#login-form h1{
+  margin-left: 1rem;
+  color: blue;
+}
+#login-form h2{
+  color: blue;
+  font-weight: bold;
+  text-transform:capitalize ;
+}
+#login-form {
+border-radius: 10%;
+padding: 4rem;
+border: 2px solid rgb(197, 242, 245);
+margin-top: 10rem;
+margin-left: 30rem;
+width:fit-content;
+}
+
+#login-form label {
+display: block;
+margin-bottom: 10px;
+font-size: 2rem;
+}
+
+#login-form input[type="email"], #login-form input[type="password"] {
+width: 100%;
+padding: 12px 20px;
+margin-bottom: 20px;
+box-sizing: border-box;
+}
+
+input[type="submit"]{
+padding: 1rem;
+border-radius: 30%;
+font-weight: bold;
+color: blue;
+font-size: 1.5rem;
+}
+.btn-loginbtn{
+  border-radius: 5%;
+  font-size: 1.5rem;
+  width: fit-content;
+}
+
+
+@media (max-width: 700px) {
   html {
-    font-size: 55 px;
+    font-size: 35 px;
   }
   .home {
     padding: 1rem 4rem;
   }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 291px) {
   header {
     left: -120%;
   }
