--- a/dashboard.css
+++ b/dashboard.css
@@ -31,25 +31,28 @@ header nav ul li a {
 }
 
 footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: rgb(21, 31, 32);
-  color: white;
-  text-align: center;
- padding: .1rem;
- margin: 1rem;
+  padding:1rem;
+  background-color: rgb(76, 124, 163);
+padding-top: 2rem;
 }
 
-
-
-.icon{
+i{
   padding: .1rem;
-  font-size: 3rem;
-  margin: 3rem;
+  font-size: 2rem;
+  margin: 1rem;
   display: block;
 }
+b{
+  color: white;
+ gap:1rem
+}
+
+.footer{
+  padding-left: 84rem;
+  margin: 1rem;
+  
+}
+
 .menu p{
   margin-left: 3rem; 
 }
@@ -69,6 +72,12 @@ li{
   list-style: none;
 }
 .nwe-post{
-margin-left: 50rem;
+margin-left: 90rem;
+padding: 1rem;
+text-align:center;
+border-radius: .3rem;
+margin-top: 2rem;
+background-color: rgb(145, 157, 211);
+color:white;
 
 }
