--- a/blog.css
+++ b/blog.css
@@ -11,7 +11,7 @@
 button{
   border-radius: 10%;
   padding:1rem;
-  background-color:rgb(248, 247, 252)
+  background-color:rgb(10, 146, 101)
 }
 input{
   padding:1rem;
@@ -23,7 +23,6 @@ input{
 
 
 html {
-  font-size: 15px;
   overflow-x: hidden;
   padding: 1rem;
 }
@@ -32,7 +31,7 @@ html {
 body {
   background: rgb(161, 227, 231);
   overflow-x: hidden;
-  padding: 1rem;
+  padding: .5rem;
  
 }
 
@@ -41,17 +40,21 @@ body {
 }
 
 div span{
-  color:rgb(4, 6, 15)
+  color:rgb(12, 46, 197)
   
 }
 div p{
   text-align: center;
   padding-bottom: 4rem;
+  font-weight: bold;
 }
 
 img{
-  width: 170px;
+  width: 20rem;
   float:left;
+  border-radius: 10rem;
+  padding-bottom: 1rem;
+  
 
 }
 .section{
@@ -61,16 +64,26 @@ img{
 
 }
 
-
+ #para1 h3, #para2 h3, #para3 h3, #para4 h3{
+  color: rgb(22, 1, 97);
+  padding-left: 35rem;
+ }
 a  .s1, .s1, .s2, .s3, .s4, .s5{
- color:rgb(32, 194, 243);
  font-size: 1.4rem;
  color:rgb(53, 19, 175);
- background-color: aqua;
  border-radius: 10%;
- margin-left: 8rem;
+ margin-left: 2rem;
 
 }
+a  .s1 .s1 .s2 .s3 .s4 .s5:hover{
+  font-size: 1.4rem;
+  color:rgb(245, 244, 250);
+  text-transform: capitalize;
+  text-decoration: underline;
+ 
+
+ 
+ }
 a{
   align-items: center;
   justify-content: space-between;
