--- a/ui/adminn.css
+++ b/ui/adminn.css
@@ -1,8 +1,9 @@
-form {
-  width: 500px;
-  margin: 0 auto;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "poppin", sans-serif;
+  box-sizing: border-box;
 }
-
 label {
   display: block;
   margin-bottom: 10px;
